1 done su stiliais

--- a/Task 1/Index.html
+++ b/Task 1/Index.html
@@ -31,7 +31,7 @@
               
           <p>Uncijos (oz): <span id="Ounces"></span></p>
         </div>
-      
+      </form>
       </div>  
     </form>
     </main>
